--- a/packager/pkggraphexplorer.lfm
+++ b/packager/pkggraphexplorer.lfm
@@ -18,9 +18,10 @@ object PkgGraphExplorerDlg: TPkgGraphExplorerDlg
     Lines.Strings = (
       'InfoMemo'
     )
+    OnKeyDown = InfoMemoKeyDown
     TabOrder = 0
-    Height = 79
-    Top = 334
+    Height = 144
+    Top = 269
     Width = 462
   end
   object VerticalSplitter: TSplitter
@@ -31,17 +32,17 @@ object PkgGraphExplorerDlg: TPkgGraphExplorerDlg
     ResizeAnchor = akBottom
     Cursor = crVSplit
     Height = 5
-    Top = 329
+    Top = 264
     Width = 462
   end
   object PkgListPanel: TPanel
     Align = alRight
     BevelOuter = bvNone
-    ClientHeight = 329
+    ClientHeight = 264
     ClientWidth = 229
     TabOrder = 1
     Left = 233
-    Height = 329
+    Height = 264
     Width = 229
     object PkgListLabel: TLabel
       Align = alTop
@@ -59,30 +60,31 @@ object PkgGraphExplorerDlg: TPkgGraphExplorerDlg
       ClickOnSelChange = False
       OnClick = PkgListBoxClick
       OnDblClick = PkgListBoxDblClick
+      OnKeyDown = InfoMemoKeyDown
       TabOrder = 0
       TopIndex = -1
-      Height = 304
+      Height = 239
       Top = 25
       Width = 229
     end
   end
   object HorizontalSplitter: TSplitter
     Align = alRight
-    Height = 329
+    Height = 264
     Width = 4
     ResizeAnchor = akRight
     Cursor = crHSplit
     Left = 229
-    Height = 329
+    Height = 264
     Width = 4
   end
   object PkgTreePanel: TPanel
     Align = alClient
     BevelOuter = bvNone
-    ClientHeight = 329
+    ClientHeight = 264
     ClientWidth = 229
     TabOrder = 2
-    Height = 329
+    Height = 264
     Width = 229
     object PkgTreeLabel: TLabel
       Align = alTop
@@ -104,9 +106,10 @@ object PkgGraphExplorerDlg: TPkgGraphExplorerDlg
       TabOrder = 0
       OnDblClick = PkgTreeViewDblClick
       OnExpanding = PkgTreeViewExpanding
+      OnKeyDown = InfoMemoKeyDown
       OnSelectionChanged = PkgTreeViewSelectionChanged
       Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoRightClickSelect, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
-      Height = 304
+      Height = 239
       Top = 25
       Width = 229
     end
