--- a/ide/debugoptionsfrm.lfm
+++ b/ide/debugoptionsfrm.lfm
@@ -1,19 +1,19 @@
 object DebuggerOptionsForm: TDebuggerOptionsForm
   ActiveControl = cmbDebuggerType
-  BorderStyle = bsSizeToolWin
+  BorderIcons = [biSystemMenu]
   Caption = 'Debugger Options'
-  ClientHeight = 447
-  ClientWidth = 491
+  ClientHeight = 443
+  ClientWidth = 482
   OnCreate = DebuggerOptionsFormCREATE
   OnDestroy = DebuggerOptionsFormDESTROY
-  PixelsPerInch = 96
+  PixelsPerInch = 112
   Position = poScreenCenter
-  HorzScrollBar.Page = 490
-  VertScrollBar.Page = 446
+  HorzScrollBar.Page = 481
+  VertScrollBar.Page = 442
   Left = 410
-  Height = 447
+  Height = 443
   Top = 196
-  Width = 491
+  Width = 482
   object nbDebugOptions: TNotebook
     Align = alTop
     Anchors = [akTop, akLeft, akRight, akBottom]
@@ -21,27 +21,29 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
     PageIndex = 3
     AnchorSideBottom.Control = cmdOK
     Left = 6
-    Height = 400
+    Height = 397
     Top = 6
-    Width = 479
+    Width = 470
     object pgGeneral: TPage
       Caption = 'Page1'
-      ClientWidth = 471
-      ClientHeight = 374
-      Height = 374
-      Width = 471
+      ClientWidth = 466
+      ClientHeight = 367
+      Left = 2
+      Height = 367
+      Top = 28
+      Width = 466
       object gbDebuggerType: TGroupBox
         Align = alTop
         BorderSpacing.Around = 6
         Caption = 'Debugger type and path'
-        ClientHeight = 72
-        ClientWidth = 455
+        ClientHeight = 73
+        ClientWidth = 450
         ParentCtl3D = False
         TabOrder = 0
         Left = 6
         Height = 90
         Top = 6
-        Width = 459
+        Width = 454
         object cmbDebuggerType: TComboBox
           Anchors = [akTop, akLeft, akRight]
           AutoCompleteText = [cbactEndOfLineComplete, cbactSearchAscending]
@@ -52,7 +54,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Left = 6
           Height = 21
           Top = 8
-          Width = 438
+          Width = 433
         end
         object cmbDebuggerPath: TComboBox
           Anchors = [akTop, akLeft, akRight]
@@ -63,7 +65,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Left = 6
           Height = 21
           Top = 40
-          Width = 413
+          Width = 408
         end
         object cmdOpenDebuggerPath: TButton
           Anchors = [akTop, akRight]
@@ -71,7 +73,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Caption = '...'
           OnClick = cmdOpenDebuggerPathCLICK
           TabOrder = 2
-          Left = 421
+          Left = 416
           Height = 25
           Top = 37
           Width = 23
@@ -81,21 +83,21 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         Align = alTop
         BorderSpacing.Around = 6
         Caption = 'Additional search path'
-        ClientHeight = 38
-        ClientWidth = 455
+        ClientHeight = 39
+        ClientWidth = 450
         ParentCtl3D = False
         TabOrder = 1
         Left = 6
         Height = 56
         Top = 102
-        Width = 459
+        Width = 454
         object txtAdditionalPath: TEdit
           Anchors = [akTop, akLeft, akRight]
           TabOrder = 0
           Left = 6
           Height = 25
           Top = 5
-          Width = 411
+          Width = 406
         end
         object cmdOpenAdditionalPath: TButton
           Anchors = [akTop, akRight]
@@ -103,7 +105,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Caption = '...'
           OnClick = cmdOpenAdditionalPathClick
           TabOrder = 1
-          Left = 421
+          Left = 416
           Height = 24
           Top = 5
           Width = 23
@@ -113,28 +115,28 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         Align = alClient
         BorderSpacing.Around = 6
         Caption = 'Debugger specific options (depends on type of debugger)'
-        ClientHeight = 124
-        ClientWidth = 455
+        ClientHeight = 118
+        ClientWidth = 450
         ParentCtl3D = False
         TabOrder = 2
         Left = 6
-        Height = 142
+        Height = 135
         Top = 226
-        Width = 459
+        Width = 454
         object pnlDebugSpecific: TPanel
           Align = alClient
           BorderSpacing.Around = 6
           BevelOuter = bvNone
           BorderWidth = 4
-          ClientHeight = 112
-          ClientWidth = 443
+          ClientHeight = 106
+          ClientWidth = 438
           FullRepaint = False
           TabOrder = 0
           TabStop = True
           Left = 6
-          Height = 112
+          Height = 106
           Top = 6
-          Width = 443
+          Width = 438
         end
       end
       object gcbDebuggerGeneralOptions: TCheckGroup
@@ -154,44 +156,46 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         Left = 6
         Height = 56
         Top = 164
-        Width = 459
+        Width = 454
       end
     end
     object pgEventLog: TPage
       Caption = 'Page2'
-      ClientWidth = 471
-      ClientHeight = 374
-      Height = 374
-      Width = 471
+      ClientWidth = 466
+      ClientHeight = 367
+      Left = 2
+      Height = 367
+      Top = 28
+      Width = 466
       object gbGeneral: TGroupBox
         Align = alTop
         BorderSpacing.Around = 6
         Caption = 'General'
-        ClientHeight = 114
-        ClientWidth = 455
+        ClientHeight = 132
+        ClientWidth = 454
         ParentCtl3D = False
         TabOrder = 0
         Left = 6
         Height = 132
         Top = 6
-        Width = 459
+        Width = 454
         object chkClearLogOnRun: TCheckBox
           AllowGrayed = True
           Caption = 'Clear log on run'
           TabOrder = 0
           Left = 4
-          Height = 13
+          Height = 24
           Top = 5
-          Width = 94
+          Width = 118
         end
         object chkLimitLinecount: TCheckBox
           AllowGrayed = True
           Caption = 'Limit linecount to'
           TabOrder = 1
           Left = 4
-          Height = 13
+          Height = 24
           Top = 29
-          Width = 99
+          Width = 121
         end
         object seLimitLinecount: TSpinEdit
           Enabled = False
@@ -199,105 +203,107 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Left = 46
           Height = 20
           Top = 54
-          Width = 78
+          Width = 82
         end
       end
       object gbMessages: TGroupBox
         Align = alClient
         BorderSpacing.Around = 6
         Caption = 'Messages'
-        ClientHeight = 206
-        ClientWidth = 455
+        ClientHeight = 217
+        ClientWidth = 454
         Enabled = False
         ParentCtl3D = False
         TabOrder = 1
         Left = 6
-        Height = 224
+        Height = 217
         Top = 144
-        Width = 459
+        Width = 454
         object chkMessagesBreakpoint: TCheckBox
           AllowGrayed = True
           Caption = 'Breakpoint'
           TabOrder = 0
           Left = 4
-          Height = 13
+          Height = 24
           Top = 5
-          Width = 71
+          Width = 86
         end
         object chkMessagesProcess: TCheckBox
           AllowGrayed = True
           Caption = 'Process'
           TabOrder = 1
           Left = 4
-          Height = 13
+          Height = 24
           Top = 29
-          Width = 58
+          Width = 72
         end
         object chkMessagesThread: TCheckBox
           AllowGrayed = True
           Caption = 'Thread'
           TabOrder = 2
           Left = 4
-          Height = 13
+          Height = 24
           Top = 53
-          Width = 54
+          Width = 66
         end
         object chkMessagesModule: TCheckBox
           AllowGrayed = True
           Caption = 'Module'
           TabOrder = 3
           Left = 4
-          Height = 13
+          Height = 24
           Top = 77
-          Width = 55
+          Width = 69
         end
         object chkMessagesOutput: TCheckBox
           AllowGrayed = True
           Caption = 'Output'
           TabOrder = 4
           Left = 4
-          Height = 13
+          Height = 24
           Top = 101
-          Width = 52
+          Width = 64
         end
         object chkMessagesWindow: TCheckBox
           AllowGrayed = True
           Caption = 'Window'
           TabOrder = 5
           Left = 4
-          Height = 13
+          Height = 24
           Top = 125
-          Width = 59
+          Width = 71
         end
         object chkMessagesInterface: TCheckBox
           AllowGrayed = True
           Caption = 'Interface'
           TabOrder = 6
           Left = 4
-          Height = 13
+          Height = 24
           Top = 149
-          Width = 62
+          Width = 75
         end
       end
     end
     object pgExceptions: TPage
       Caption = 'Page3'
-      ClientWidth = 471
-      ClientHeight = 374
-      Height = 374
-      Width = 471
+      ClientWidth = 466
+      ClientHeight = 367
+      Left = 2
+      Height = 367
+      Top = 28
+      Width = 466
       object bgIgnoreExceptions: TGroupBox
         Align = alClient
         BorderSpacing.Around = 6
         Caption = 'Ignore these exceptions'
         ClientHeight = 325
-        ClientWidth = 455
+        ClientWidth = 454
         ParentCtl3D = False
         TabOrder = 0
         Left = 6
-        Height = 343
+        Height = 325
         Top = 6
-        Width = 459
+        Width = 454
         object cmdExceptionRemove: TButton
           Anchors = [akRight, akBottom]
           AutoSize = True
@@ -311,10 +317,10 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           AnchorSideRight.Side = asrBottom
           AnchorSideBottom.Control = bgIgnoreExceptions
           AnchorSideBottom.Side = asrBottom
-          Left = 385
-          Height = 29
-          Top = 290
-          Width = 64
+          Left = 393
+          Height = 26
+          Top = 293
+          Width = 55
         end
         object cmdExceptionAdd: TButton
           Anchors = [akRight, akBottom]
@@ -327,23 +333,26 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           AnchorSideRight.Control = cmdExceptionRemove
           AnchorSideBottom.Control = bgIgnoreExceptions
           AnchorSideBottom.Side = asrBottom
-          Left = 336
-          Height = 29
-          Top = 290
-          Width = 43
+          Left = 354
+          Height = 26
+          Top = 293
+          Width = 33
         end
         object clbExceptions: TCheckListBox
           Align = alTop
           Anchors = [akTop, akLeft, akRight, akBottom]
           BorderSpacing.Around = 6
+          BorderStyle = bsSingle
           OnClick = clbExceptionsCLICK
           TabOrder = 2
+          TabStop = True
+          TopIndex = -1
           AnchorSideRight.Side = asrBottom
           AnchorSideBottom.Control = cmdExceptionAdd
           Left = 6
-          Height = 278
+          Height = 281
           Top = 6
-          Width = 443
+          Width = 442
         end
       end
       object chkBreakOnException: TCheckBox
@@ -354,29 +363,31 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         Caption = 'Break on Lazarus Exceptions'
         TabOrder = 1
         Left = 6
-        Height = 13
-        Top = 355
-        Width = 459
+        Height = 24
+        Top = 337
+        Width = 454
       end
     end
     object pgSignals: TPage
       Caption = 'Page4'
-      ClientWidth = 471
-      ClientHeight = 374
-      Height = 374
-      Width = 471
+      ClientWidth = 466
+      ClientHeight = 367
+      Left = 2
+      Height = 367
+      Top = 28
+      Width = 466
       object gbSignals: TGroupBox
         Align = alClient
         BorderSpacing.Around = 6
         Caption = 'Signals'
-        ClientHeight = 344
-        ClientWidth = 455
+        ClientHeight = 338
+        ClientWidth = 450
         ParentCtl3D = False
         TabOrder = 0
         Left = 6
-        Height = 362
+        Height = 355
         Top = 6
-        Width = 459
+        Width = 454
         object cmdSignalRemove: TButton
           Anchors = [akRight, akBottom]
           AutoSize = True
@@ -389,10 +400,10 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           AnchorSideRight.Side = asrBottom
           AnchorSideBottom.Control = gbSignals
           AnchorSideBottom.Side = asrBottom
-          Left = 385
-          Height = 29
-          Top = 309
-          Width = 64
+          Left = 389
+          Height = 26
+          Top = 306
+          Width = 55
         end
         object cmdSignalAdd: TButton
           Anchors = [akRight, akBottom]
@@ -404,10 +415,10 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           AnchorSideRight.Control = cmdSignalRemove
           AnchorSideBottom.Control = gbSignals
           AnchorSideBottom.Side = asrBottom
-          Left = 336
-          Height = 29
-          Top = 309
-          Width = 43
+          Left = 350
+          Height = 26
+          Top = 306
+          Width = 33
         end
         object lvSignals: TListView
           Align = alTop
@@ -434,9 +445,9 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           ViewStyle = vsReport
           AnchorSideBottom.Control = cmdSignalAdd
           Left = 6
-          Height = 297
+          Height = 294
           Top = 6
-          Width = 443
+          Width = 438
         end
       end
     end
@@ -457,16 +468,17 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
     AnchorSideRight.Side = asrBottom
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
-    Left = 417
-    Height = 29
-    Top = 412
-    Width = 68
+    Left = 425
+    Height = 28
+    Top = 409
+    Width = 51
   end
   object cmdCancel: TBitBtn
     Anchors = [akRight, akBottom]
     AutoSize = True
     BorderSpacing.Around = 6
     BorderSpacing.InnerBorder = 2
+    Cancel = True
     Caption = 'Cancel'
     Constraints.MaxHeight = 29
     Kind = bkCancel
@@ -476,33 +488,14 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
     AnchorSideRight.Control = cmdOK
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
-    Left = 331
-    Height = 29
-    Top = 412
-    Width = 80
-  end
-  object btnHelp: TBitBtn
-    Anchors = [akLeft, akBottom]
-    AutoSize = True
-    BorderSpacing.Around = 6
-    BorderSpacing.InnerBorder = 2
-    Caption = '&Help'
-    Constraints.MaxHeight = 29
-    Enabled = False
-    Kind = bkHelp
-    NumGlyphs = 0
-    TabOrder = 3
-    AnchorSideLeft.Control = Owner
-    AnchorSideBottom.Control = Owner
-    AnchorSideBottom.Side = asrBottom
-    Left = 6
-    Height = 29
-    Top = 412
-    Width = 75
+    Left = 346
+    Height = 28
+    Top = 409
+    Width = 73
   end
   object popSignal: TPopupMenu
-    left = 408
-    top = 96
+    left = 8
+    top = 448
     object mnuHandledByProgram: TMenuItem
       AutoCheck = True
       Caption = 'Handled by Program'
