--- a/ide/diffdialog.lfm
+++ b/ide/diffdialog.lfm
@@ -1,60 +1,88 @@
 object DiffDlg: TDiffDlg
+  ActiveControl = SaveDiffButton
+  BorderIcons = [biSystemMenu]
   Caption = 'Diff dialog'
-  ClientHeight = 500
-  ClientWidth = 600
+  ClientHeight = 497
+  ClientWidth = 598
   PixelsPerInch = 112
   Position = poScreenCenter
-  HorzScrollBar.Page = 599
-  VertScrollBar.Page = 499
-  Left = 328
-  Height = 500
-  Top = 219
-  Width = 600
+  HorzScrollBar.Page = 597
+  VertScrollBar.Page = 496
+  Left = 313
+  Height = 497
+  Top = 139
+  Width = 598
   HelpType = htKeyword
   object SaveDiffButton: TButton
     Anchors = [akRight, akBottom]
+    AutoSize = True
+    BorderSpacing.Around = 6
+    BorderSpacing.InnerBorder = 2
     Caption = 'Save Diff'
     OnClick = SaveDiffButtonClick
     TabOrder = 0
-    Left = 517
-    Height = 25
-    Top = 467
-    Width = 75
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
+    Left = 531
+    Height = 26
+    Top = 465
+    Width = 61
   end
   object OpenInEditorButton: TButton
     Anchors = [akRight, akBottom]
+    AutoSize = True
+    BorderSpacing.Around = 6
+    BorderSpacing.InnerBorder = 2
     Caption = 'OpenInEditorButton'
     ModalResult = 6
     TabOrder = 1
-    Left = 278
-    Height = 25
-    Top = 467
-    Width = 237
+    AnchorSideRight.Control = SaveDiffButton
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
+    Left = 407
+    Height = 26
+    Top = 465
+    Width = 118
   end
   object CloseButton: TButton
     Anchors = [akRight, akBottom]
-    BorderSpacing.OnChange = nil
+    AutoSize = True
+    BorderSpacing.Around = 6
+    BorderSpacing.InnerBorder = 2
+    Cancel = True
     Caption = 'CloseButton'
     ModalResult = 1
     TabOrder = 2
-    Left = 198
-    Height = 25
-    Top = 467
-    Width = 75
+    AnchorSideRight.Control = OpenInEditorButton
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
+    Left = 324
+    Height = 26
+    Top = 465
+    Width = 77
   end
   object Text1GroupBox: TGroupBox
-    Anchors = [akTop, akLeft, akRight]
+    Align = alTop
+    Anchors = [akRight]
+    AutoSize = True
+    BorderSpacing.Around = 6
+    BorderSpacing.InnerBorder = 6
     Caption = 'Text1GroupBox'
     ClientHeight = 63
-    ClientWidth = 580
-    ParentColor = True
+    ClientWidth = 582
     TabOrder = 3
-    Left = 8
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = Owner
+    Left = 6
     Height = 80
-    Top = 8
-    Width = 584
+    Top = 6
+    Width = 586
     object Text1Combobox: TComboBox
       Anchors = [akTop, akLeft, akRight]
+      AutoCompleteText = [cbactEndOfLineComplete, cbactSearchAscending]
+      BorderSpacing.Around = 6
       MaxLength = 0
       OnChange = Text1ComboboxChange
       TabOrder = 0
@@ -62,44 +90,52 @@ object DiffDlg: TDiffDlg
       Left = 6
       Height = 21
       Top = 6
-      Width = 488
+      Width = 490
     end
     object Text1OnlySelectionCheckBox: TCheckBox
       Anchors = [akTop, akLeft, akRight]
+      BorderSpacing.Top = 6
+      BorderSpacing.Bottom = 6
       Caption = 'Text1OnlySelectionCheckBox'
       OnChange = OnChangeFlag
       TabOrder = 1
+      AnchorSideLeft.Control = Text1Combobox
+      AnchorSideTop.Control = Text1Combobox
+      AnchorSideTop.Side = asrBottom
       Left = 6
-      Height = 23
-      Top = 32
-      Width = 488
+      Height = 24
+      Top = 33
+      Width = 490
     end
     object Text1FileOpenButton: TButton
       Anchors = [akTop, akRight]
-      BorderSpacing.OnChange = nil
+      BorderSpacing.InnerBorder = 2
       Caption = 'File'
       OnClick = FileOpenClick
       TabOrder = 2
-      Left = 499
+      Left = 501
       Height = 21
       Top = 6
       Width = 75
     end
   end
   object Text2GroupBox: TGroupBox
-    Anchors = [akTop, akLeft, akRight]
+    Align = alTop
+    AutoSize = True
+    BorderSpacing.Around = 6
+    BorderSpacing.InnerBorder = 6
     Caption = 'Text2GroupBox'
     ClientHeight = 63
-    ClientWidth = 580
-    ParentColor = True
+    ClientWidth = 582
     TabOrder = 4
-    Left = 8
+    Left = 6
     Height = 80
-    Top = 96
-    Width = 584
+    Top = 92
+    Width = 586
     object Text2Combobox: TComboBox
       Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.OnChange = nil
+      AutoCompleteText = [cbactEndOfLineComplete, cbactSearchAscending]
+      BorderSpacing.Around = 6
       MaxLength = 0
       OnChange = Text2ComboboxChange
       TabOrder = 0
@@ -107,25 +143,29 @@ object DiffDlg: TDiffDlg
       Left = 6
       Height = 21
       Top = 6
-      Width = 488
+      Width = 490
     end
     object Text2OnlySelectionCheckBox: TCheckBox
       Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.OnChange = nil
+      BorderSpacing.Top = 6
+      BorderSpacing.Bottom = 6
       Caption = 'Text2OnlySelectionCheckBox'
       OnChange = OnChangeFlag
       TabOrder = 1
+      AnchorSideTop.Control = Text2Combobox
+      AnchorSideTop.Side = asrBottom
       Left = 6
-      Height = 23
-      Top = 32
-      Width = 488
+      Height = 24
+      Top = 33
+      Width = 490
     end
     object Text2FileOpenButton: TButton
       Anchors = [akTop, akRight]
+      BorderSpacing.InnerBorder = 2
       Caption = 'File'
       OnClick = FileOpenClick
       TabOrder = 2
-      Left = 499
+      Left = 501
       Height = 21
       Top = 6
       Width = 75
@@ -133,27 +173,43 @@ object DiffDlg: TDiffDlg
   end
   object OptionsGroupBox: TCheckGroup
     Anchors = [akLeft, akRight, akBottom]
-    BorderSpacing.Top = 100
+    AutoFill = True
+    BorderSpacing.Around = 6
     Caption = 'OptionsGroupBox'
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.TopBottomSpacing = 6
+    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+    ChildSizing.EnlargeVertical = crsHomogenousChildResize
+    ChildSizing.ShrinkHorizontal = crsScaleChilds
+    ChildSizing.ShrinkVertical = crsScaleChilds
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 2
     Columns = 2
-    ParentColor = True
-    AnchorSideTop.Control = Text2GroupBox
-    Left = 8
-    Height = 83
-    Top = 375
-    Width = 584
+    TabOrder = 5
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = DiffSynEdit
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    AnchorSideBottom.Control = CloseButton
+    Left = 6
+    Height = 85
+    Top = 374
+    Width = 586
   end
   object DiffSynEdit: TSynEdit
-    BorderSpacing.OnChange = nil
+    Align = alTop
+    BorderSpacing.Around = 6
     Anchors = [akTop, akLeft, akRight, akBottom]
     Font.Color = clBlack
     Font.Height = -12
     Font.Name = 'courier'
     Font.Pitch = fpFixed
-    Height = 184
+    Height = 187
     Name = 'DiffSynEdit'
+    ParentColor = False
     TabOrder = 6
-    Width = 584
+    Width = 586
     BookMarkOptions.Xoffset = -18
     BookMarkOptions.OnChange = nil
     Gutter.Visible = False
@@ -485,10 +541,10 @@ object DiffDlg: TDiffDlg
     )
     SelectedColor.OnChange = nil
     Cursor = crIBeam
-    Left = 8
-    Height = 184
-    Top = 184
-    Width = 584
+    Left = 6
+    Height = 187
+    Top = 178
+    Width = 586
   end
   object dlgSave: TSaveDialog
     Title = 'Save file as'
