--- a/ide/projectinspector.lfm
+++ b/ide/projectinspector.lfm
@@ -1,17 +1,17 @@
 object ProjectInspectorForm: TProjectInspectorForm
   ActiveControl = OpenBitBtn
-  BorderStyle = bsSizeToolWin
+  BorderIcons = [biSystemMenu]
   Caption = 'ProjectInspectorForm'
   ClientHeight = 300
-  ClientWidth = 403
+  ClientWidth = 394
   OnShow = ProjectInspectorFormShow
-  PixelsPerInch = 112
-  HorzScrollBar.Page = 402
+  PixelsPerInch = 96
+  HorzScrollBar.Page = 393
   VertScrollBar.Page = 299
   Left = 460
   Height = 300
   Top = 401
-  Width = 403
+  Width = 394
   object OpenBitBtn: TBitBtn
     AutoSize = True
     BorderSpacing.InnerBorder = 2
@@ -19,8 +19,8 @@ object ProjectInspectorForm: TProjectInspectorForm
     NumGlyphs = 0
     OnClick = OpenBitBtnClick
     TabOrder = 0
-    Height = 26
-    Width = 76
+    Height = 29
+    Width = 78
   end
   object AddBitBtn: TBitBtn
     AutoSize = True
@@ -31,9 +31,9 @@ object ProjectInspectorForm: TProjectInspectorForm
     TabOrder = 1
     AnchorSideLeft.Control = OpenBitBtn
     AnchorSideLeft.Side = asrBottom
-    Left = 76
-    Height = 26
-    Width = 68
+    Left = 78
+    Height = 29
+    Width = 71
   end
   object RemoveBitBtn: TBitBtn
     AutoSize = True
@@ -44,9 +44,9 @@ object ProjectInspectorForm: TProjectInspectorForm
     TabOrder = 2
     AnchorSideLeft.Control = AddBitBtn
     AnchorSideLeft.Side = asrBottom
-    Left = 144
-    Height = 26
-    Width = 90
+    Left = 149
+    Height = 29
+    Width = 92
   end
   object OptionsBitBtn: TBitBtn
     Anchors = [akTop, akLeft, akRight]
@@ -58,9 +58,9 @@ object ProjectInspectorForm: TProjectInspectorForm
     TabOrder = 3
     AnchorSideLeft.Control = RemoveBitBtn
     AnchorSideLeft.Side = asrBottom
-    Left = 234
-    Height = 26
-    Width = 169
+    Left = 241
+    Height = 29
+    Width = 153
   end
   object ItemsTreeView: TTreeView
     Align = alBottom
@@ -71,11 +71,12 @@ object ProjectInspectorForm: TProjectInspectorForm
     RightClickSelect = True
     TabOrder = 4
     OnDblClick = ItemsTreeViewDblClick
+    OnKeyDown = ItemsTreeViewKeyDown
     OnSelectionChanged = ItemsTreeViewSelectionChanged
     Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoRightClickSelect, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
     Height = 269
     Top = 31
-    Width = 403
+    Width = 394
   end
   object ImageList: TImageList
     left = 39
